--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,7 @@ body{
   width: 0;
   height: 100%;
   background: 
-  #1b1b1b;
+  #ddd2d2;
   transition: all 0.35s;
   border-radius: 24px;
 }
@@ -334,6 +334,7 @@ body{
 
 .main__img--container {
   text-align: center;
+  
 }
 
 #main__img {
@@ -342,6 +343,15 @@ body{
 }
 .service_tag{
   display: flex;
+}
+.main video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.8;
 }
 
 /* Mobile Responsive */
