--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body{
   background-color: #1B1B1C;
   font-family: 'Righteous';
 }
+
+img {
+  width: 100%;
+}
 .navbar {
   background: #1b1b1b;
   height: 80px;
@@ -354,6 +358,40 @@ body{
   object-fit: cover;
   opacity: 0.8;
 }
+
+/* .wave {
+	position: absolute;
+	width: 10%;
+	overflow: hidden;
+	height: 10%;
+	bottom: -1px;
+	background: #000000;
+	z-index: 5;
+}
+
+.single-wave {
+	position: absolute;
+	left: 0;
+	width: 20%;
+	height: 10%;
+	background-repeat: repeat no-repeat;
+	background-position: 0 bottom;
+	transform-origin: center bottom;
+	background-size: 10% 10px;
+	animation: animate 18s linear infinite;
+}
+@keyframes animate {
+	0% {
+		transform: translateX(0) translateZ(0) scaleY(1);
+	}
+	50% {
+		transform: translateX(-25%) translateZ(0) scaleY(0.55)
+	}
+	100% {
+		transform: translateX(-50%) translateZ(0) scaleY(1)
+	}
+} */
+
 
 /* Mobile Responsive */
 @media screen and (max-width: 768px) {
@@ -915,6 +953,25 @@ margin-bottom: 0;
 
 
 
+
+
+.cont {
+  padding: 10%;
+}
+.cont h4 {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  
+}
+.cont p {
+  line-height: 1.5;
+ 
+}
+.cont h4,p {
+  color: white;
+}
+
 .work-and-client-header{
   font-family: 'Righteous';
   font-size: 3.3vw;
@@ -928,22 +985,33 @@ margin-bottom: 0;
   text-decoration: line-through;
   text-decoration-color: #feef3c;
   text-decoration-thickness: 5px;
+  padding-bottom: auto;
   
 
 }
 .works-and-clients-text {
-  color: #1a1818;
-  background-color: #e9e9e9;
+  
+  background-color: #d0cbcb;
   padding-bottom: 0px;
+  width: 100%;
+  padding: 30px 30px 30px 30px;
   
+  color: #080808;
+  position: relative;
+ 
   
+}
+.works-and-clients-text p{
+  color: #080808;
+  text-align: center;
+  justify-content: center;
 }
 
 .work-sample-grid{
   background-color: #ffffff;
   display: flex;
   justify-content: center;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
   
 }
 
@@ -952,11 +1020,59 @@ margin-bottom: 0;
   display: grid;
   grid-template-columns: auto auto auto;
   width: 70vw;
-  margin-left:10vw ;
+  margin-left:1vw ;
   height: 90vh;
   padding-top: 10vh;
 }
 
+.grid-cointainer .grid-item{
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 15px;
+  box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
+  height: 250px;
+  overflow: hidden;    
+}
+
+.grid-cointainer .grid-item::before{
+  content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 5px;
+    height: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+.grid-cointainer .grid-item img{
+  width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.grid-cointainer .grid-item:hover::before{
+  top: 0;
+  right: calc(100% - 5px);
+  z-index: 10;
+}
+
+.grid-cointainer .grid-item .img-text{
+  position: absolute;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(36, 34, 34, 0.9);
+	width: 100%;
+	height: 100%;
+	top: 0;
+	right: 100%;
+	transition: all 0.5s ease-in-out;	
+}
+
+.grid-cointainer .grid-item:hover .img-text{
+  top: 0;
+    right: 0;
+}
 .grid-item{
   padding-top: 3.4375vw;
   padding-right: 2.75vw;
@@ -964,7 +1080,7 @@ margin-bottom: 0;
 
 
 .grid-item h4{
-  font-family: Open Sans;
+  font-family: 'Righteous';
   font-size: 1VW;
   font-style: normal;
   width: 200px;
@@ -972,11 +1088,11 @@ margin-bottom: 0;
   line-height: 1.306vw;
   height: 1.443vh;
   width: fit-content;
-  color: #1b1b1b;
+  color: #e8e6e6;
 }
 
 .grid-item p{
-  font-family: Open Sans;
+  font-family: 'Righteous';
   padding-top: 10px;
   font-size: .8VW;
   font-style: normal;
@@ -984,7 +1100,7 @@ margin-bottom: 0;
   line-height: .8vw;
   letter-spacing: 0em;
   text-align: left;
-  color: #141414;
+  color: #ffffff;
 
 }
 
@@ -1111,13 +1227,13 @@ margin-bottom: 0;
   padding: 5rem 0;
   display: flex;
   flex-direction: column;
-  justify-content:right;
+  justify-content: space-between;
   align-items:stretch;
   padding-bottom: 4rem;        
-  text-align: center;
+ 
   
   bottom: 0;
-  text-align: center;
+ 
   margin: 0 auto;
   line-height: auto;
 
@@ -1126,27 +1242,26 @@ margin-bottom: 0;
 #footer__logo {
   color: #fff;
   display: flex;
-  align-items: center;
+  align-items: left;
   cursor: pointer;
   text-decoration: none;
   font-size: 1rem;
+  width: 100%;
 }
 .footer__logo img{
     height: 163px;
     width: 163px;
     border-radius: 0px;
     background-position: o 100%;
-    
-   
-
 }
+
 .footer__links {
   width: 100%;
   height: 40vh;
   max-width: 1000px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: 0 auto;
 }
 
@@ -1254,4 +1369,31 @@ margin-bottom: 0;
     padding: 10px;
     width: 100%;
   }
+}
+
+
+/* Slider */
+.brand-carousel {
+	background: #fcf6ea;
+	margin: 0;
+}
+.owl-dots {
+	text-align: center;
+	margin-top: 40px;
+}
+.owl-dot {
+	display: inline-block;
+	height: 15px !important;
+	width: 15px !important;
+	background-color: #444 !important;
+	opacity: 0.8;
+	border-radius: 50%;
+	margin: 0 5px;
+}
+.owl-dot.active {
+	background-color: black !important;
+}
+
+.ser{
+  background-color: #d0cbcb;
 }
