--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,119 @@ body{
 img {
   width: 100%;
 }
+
+
+.js-scroll{
+    opacity: 0;
+    transform: translateX(-150px);
+}
+
+.js-scroll.scrolled{
+    opacity: 1;
+}
+
+.scrolled.slide-up{
+    animation: slide-in-up 1s ease-in-out both;
+}
+
+@keyframes slide-in-up {
+    0%{
+        -webkit-transform: translateY(100px);
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100%{
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.scrolled.slide-down{
+    animation: slide-in-down 1s ease-in-out both;
+}
+
+@keyframes slide-in-down {
+    0%{
+        -webkit-transform: translateY(-100px);
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100%{
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.scrolled.slide-left {
+    animation: slide-in-left 1s ease-in-out both;
+}
+
+@keyframes slide-in-left {
+    0% {
+      -webkit-transform: translateX(-100px);
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+    }
+}
+
+.scrolled.slide-right {
+    animation: slide-in-right 1s ease-in-out both;
+ }
+
+@keyframes slide-in-right {
+    0% {
+      -webkit-transform: translateX(100px);
+      transform: translateX(100px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+    }
+}
+
+.introduction-section, .about-section, .gameplay-section{
+    width: 100%;
+}
+
+.menubar {
+  width:40px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  display: none;
+}
+
+.bar{
+  width:100%;
+  height: 3px;
+  margin-top: 5px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.bar1{
+  width: 90%;
+}
+
+.bar2{
+  width: 60%;
+}
+
+.bar3{
+  width: 100%;
+}
+
+
 .navbar {
   background: #1b1b1b;
   height: 80px;
@@ -158,7 +271,7 @@ img {
     padding-left: 25px;
   }
 
-  .navbar__toggle .bar {
+  .navbar__toggle .menubar {
     width: 25px;
     height: 3px;
     margin: 5px auto;
@@ -197,7 +310,7 @@ img {
     transform: translate(5%, 20%);
   }
 
-  .navbar__toggle .bar {
+  .navbar__toggle .menubar {
     display: block;
     cursor: pointer;
   }
@@ -260,14 +373,15 @@ img {
 }
 
 .main__content {
-  color: #fff;
+  color: #ffffff;
   width: 100%;
+  
 }
 
 .main__content h1 {
-  font-size: 4rem;
-  background-color: white;
+  font-size: 5rem;
   
+ 
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -291,8 +405,35 @@ img {
   margin-top: 1rem;
   font-size: 1rem;
   font-weight: 700;
+  
+}
+.vocal{
+  position: relative;
+  top: 50%;  
+  width: 100%;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 180%;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%); 
+     
 }
 
+/* Animation */
+.anim-typewriter{
+animation: typewriter 4s steps(44) 1s 1 normal both,
+           blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+from{width: 0;}
+to{width: 100%;}
+}
+@keyframes blinkTextCursor{
+from{border-right-color: rgba(255, 255, 255, 0);}
+to{border-right-color: transparent;}
+}
 .main__btn {
   font-size: 1rem;
   background-image: inherit;
@@ -1276,11 +1417,11 @@ margin-bottom: 0;
   padding: 5rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content:flex-end;
   align-items:stretch;
   padding-bottom: 4rem;        
- 
-  
+ float: left;
+  width: 100%;
   bottom: 0;
  
   margin: 0 auto;
@@ -1295,7 +1436,7 @@ margin-bottom: 0;
   cursor: pointer;
   text-decoration: none;
   font-size: 1rem;
-  width: 100%;
+  
 }
 .footer__logo img{
     height: 163px;
@@ -1310,12 +1451,13 @@ margin-bottom: 0;
   max-width: 1000px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content:space-between;
   margin: 0 auto;
 }
 
 .footer__link--wrapper {
   display: flex;
+  float: left;
 }
 
 .footer__link--items {
@@ -1324,8 +1466,9 @@ margin-bottom: 0;
   align-items: flex-start;
   margin: 16px;
   text-align: left;
-  width: 160px;
+  width: 100%;
   box-sizing: border-box;
+  float: left;
 }
 
 .footer__link--items h2 {
