--- a/styles.css
+++ b/styles.css
@@ -557,7 +557,7 @@ to{border-right-color: transparent;}
 	margin: 0;
 	padding: 0;
 	font-size: 10em;
-	color: rgb(255,255,255,.05);
+	color: rgba(9, 1, 1, 0.912);
 	transition: 0.5s;
 }
 
