--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body{
   background-color: #1B1B1C;
   font-family: 'Righteous';
-  
+  width: 100% !important;
 }
 
 img {
@@ -142,6 +142,98 @@ img {
   text-decoration: underline;
 }
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Make the images invisible by default */
+.Containes {
+  display: none;
+}
+
+/* forward & Back buttons */
+.Back, .forward {
+  cursor: pointer;
+  position: absolute;
+  top: 48%;
+  width: auto;
+  margin-top: -23px;
+  padding: 17px;
+  color: grey;
+  font-weight: bold;
+  font-size: 19px;
+  transition: 0.4s ease;
+  border-radius: 0 5px 5px 0;
+  user-select: none;
+}
+
+/* Place the "forward button" to the right */
+.forward {
+  right: 0;
+  border-radius: 4px 0 0 4px;
+}
+
+/*when the user hovers,add a black background with some little opacity */
+.Back:hover, .forward:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption Info */
+.Info {
+  color: #e3e3e3;
+  font-size: 16px;
+  padding: 10px 14px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Worknumbering (1/3 etc) */
+.MessageInfo {
+  color: #f2f2f3;
+  font-size: 14px;
+  padding: 10px 14px;
+  position: absolute;
+  top: 0;
+}
+
+/* The circles or bullets and indicators */
+.dots {
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+  margin: 0 3px;
+  background-color: #feef3c;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.5s ease;
+}
+
+.enable, .dots:hover {
+  background-color: #717161;
+}
+
+/* Faint animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.4s;
+  animation-name: fade;
+  animation-duration: 1.4s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .5}
+  to {opacity: 2}
+}
+
+@keyframes fade {
+  from {opacity: .5}
+  to {opacity: 2}
+}
 
 .vocal{
   -webkit-text-stroke-width: 2px;
@@ -1349,7 +1441,7 @@ footer{
 }
 .footer__container {
   background-color: #141414;
-  padding: 5rem 0;
+  padding: 5rem 5rem;
   display: flex;
   flex-direction: column;
   justify-content:space-between;
@@ -1432,15 +1524,16 @@ footer{
 }
 
 .social__media {
-  max-width: 1000px;
+  
+  height: 30%;
   width: 100%;
 }
 
 .social__media--wrap {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 100%;
   max-width: 1000px;
   margin: 40px auto 0 auto;
 }
@@ -1449,7 +1542,7 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 240px;
+  width: 200px;
 }
 
 .social__logo {
@@ -1466,6 +1559,8 @@ footer{
 
 .website__rights {
   color: #fff;
+  padding-right: 50px;
+  
 }
 
 @media screen and (max-width: 820px) {
