--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,88 @@ body{
   width: 100% !important;
 }
 
+
+.js-scroll{
+  opacity: 1;
+  transform: translateX(-150px);
+}
+
+.js-scroll.scrolled{
+  opacity: 1;
+}
+
+.scrolled.slide-up{
+  animation: slide-in-up 1s ease-in-out both;
+}
+
+@keyframes slide-in-up {
+  0%{
+      -webkit-transform: translateY(100px);
+      transform: translateY(100px);
+      opacity: 0;
+  }
+  100%{
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.scrolled.slide-down{
+  animation: slide-in-down 1s ease-in-out both;
+}
+
+@keyframes slide-in-down {
+  0%{
+      -webkit-transform: translateY(-100px);
+      transform: translateY(-100px);
+      opacity: 0;
+  }
+  100%{
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.scrolled.slide-left {
+  animation: slide-in-left 1s ease-in-out both;
+}
+
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-100px);
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.scrolled.slide-right {
+  animation: slide-in-right 1s ease-in-out both;
+}
+
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+
+
+
 img {
   width: 100%;
 }
@@ -511,38 +593,31 @@ to{border-right-color: transparent;}
   opacity: 0.8;
 }
 
-/* .wave {
-	position: absolute;
-	width: 10%;
-	overflow: hidden;
-	height: 10%;
-	bottom: -1px;
-	background: #000000;
-	z-index: 5;
+.wave {
+	width: 100%;
+    opacity: 60%;
+    animation-duration: 5s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
 }
 
-.single-wave {
-	position: absolute;
-	left: 0;
-	width: 20%;
-	height: 10%;
-	background-repeat: repeat no-repeat;
-	background-position: 0 bottom;
-	transform-origin: center bottom;
-	background-size: 10% 10px;
-	animation: animate 18s linear infinite;
+@keyframes rotate {
+    0%{
+        display: block;
+    }
+
+    50%{
+        display: block;
+        transform:rotateY(180deg);
+        transition: ease-in
+    }
+
+    100%{
+        display: block;
+        transform: rotateY(0);
+    }
 }
-@keyframes animate {
-	0% {
-		transform: translateX(0) translateZ(0) scaleY(1);
-	}
-	50% {
-		transform: translateX(-25%) translateZ(0) scaleY(0.55)
-	}
-	100% {
-		transform: translateX(-50%) translateZ(0) scaleY(1)
-	}
-} */
+
 
 
 
@@ -1215,7 +1290,8 @@ margin-bottom: 0;
   
 }
 .works-and-clients-text p{
-  color: #080808;
+  color: rgba(0, 0, 0, 0.987) !important;
+
   text-align: center;
   justify-content: center;
 }
@@ -1562,6 +1638,69 @@ footer{
   padding-right: 50px;
   
 }
+
+/* Contact Section */
+.contact-section{
+  padding: 5%;
+  color: #fff;
+}
+
+.contact{
+  width: 100%;
+  height: 15.25rem;
+  
+  background: linear-gradient(180deg, rgb(189, 186, 186) 0%, rgba(255, 255, 255, 0) 100%);
+  border-radius: 17px;
+  padding: 5% 13%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.contact h5{
+  font-size: 1.5rem;
+  font-family: "Righteous";
+  margin-bottom: 1rem;
+}
+
+.contact p{
+  font-size: 1rem;
+}
+
+.contact input{
+  width: 32rem;
+  height: 54px;
+  border-radius: 50px;
+  border: none;
+  background: rgba(255, 255, 255, 0.29);
+  padding-left: 10%;
+}
+
+.contact input::placeholder{
+  font-size: 1rem;
+  color: #fff;
+  opacity: 34%;
+}
+
+.input-div{
+  position: relative;
+}
+
+.send-div{
+  width: 5.813rem;
+  height: 54px;
+  background-color: #FF325F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+
+
 
 @media screen and (max-width: 820px) {
   .footer__links {
