--- a/tech.css
+++ b/tech.css
@@ -100,3 +100,761 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*********************************************** Responsive Design **********************************************************/
+
+@media screen and (max-width: 767px) {
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Introduction Section */
+  .introduction{
+      padding: 15% 4%;
+      width: 100%;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start;
+  }
+
+  .introduction h3{
+      font-size: 1.9rem;
+  }
+
+  .introduction p{
+      font-size: 1rem;
+  }
+
+  .introduction-btn{
+      margin-top: 2.5rem;
+      width: 12rem;
+      height: 3rem;
+      font-size: 1rem;
+  }
+
+  .social-media-links{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin: 3rem auto 0;
+      position: static;
+  }
+
+  .social-media-links div:first-child{
+      margin: 0 4rem 0 0;
+  }
+  
+  .social-media-links div:last-child{
+      margin: 0 0 0 4rem;
+  }
+
+  .introduction img{
+      position: absolute;
+      left: 2%;
+      top: 12%;
+      width: 40%;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* About Section */
+  .about{
+      width: 100%;
+      padding: 5% 4%;
+      flex-direction: column-reverse;
+  }
+
+  .about-content-one{
+      width: 100%;
+      flex-direction: column;
+      gap: 1.5rem;
+      text-align: center;
+      align-items: center;
+  }
+
+  .about-content-one .child{
+      margin-top: 2rem;
+  }
+
+  .about-content-one .child div{
+      width: 100%;
+      height: 6.5rem;
+      text-align: left;
+      padding: 10px;
+      margin-top: 0.5rem;
+  }
+
+  .about-content-one .child div h4{
+      font-size: 1rem;
+  }
+  
+  .about-content-one .child div p{
+      font-size: 0.8rem;
+  }
+
+  .about-content-two{
+      padding: 0;
+      width: 100%;
+      margin-bottom: 2.5rem;
+  }
+  
+  .about-content-two h4{
+      width: 15%;
+      font-size: 1rem;
+  }
+  
+  .about-content-two h3{
+      font-size: 1.5rem;
+  }
+  
+  .about-content-two p{
+      font-size: 1rem;
+  }
+
+  .about-content-button{
+      width: 60%;
+      height: 4.5rem;
+      font-size: 1rem;
+  }
+
+  .about-content-one .child{
+      width: 70%;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Gameplay Section */
+
+  .gameplay{
+      width: 100%;
+      padding: 5% 4%;
+      flex-direction: column;
+  }
+  
+  .gameplay-content img{
+      width: 100%;
+  }
+  
+  .gameplay-content-one{
+      padding: 0 ;
+  }
+  
+  .gameplay-content-one h4{
+      font-size: 1rem;
+  }
+  
+  .gameplay-content-one h3{
+      font-size: 1.5rem;
+  }
+  
+  .gameplay-content-one p{
+      font-size: 1rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Tokenomics Section */
+  .tokenomics-section{
+      padding: 5% 4%;
+  }
+
+  .tokenomics-heading{
+      padding: 0;
+  }
+
+  .tokenomics-heading h3{
+      font-size: 1.5rem;
+  }
+
+  .tokenomics-heading p{
+      font-size: 1rem;
+  }
+
+  .tokenomics-content{
+      flex-direction: column;
+      width: 100%;
+  }
+
+  .tokenomics-content-div{
+      display: flex;
+      width: 80%;
+      margin-top: 2.5rem;
+  }
+
+  .tokenomics-content-div div:last-child{
+      text-align: left;
+      margin-left: 20px;
+  }
+
+  .tokenomics-content-div div:last-child h5{
+      font-size: 1rem;
+  }
+
+  .tokenomics-content-div div:last-child p{
+      font-size: 0.8rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Countdown Section */
+  .countdown-section{
+      padding: 10% 4%;
+  }
+
+  .countdown-timer{
+      width: 100%; 
+      height: 18rem;
+      padding: 7% 2%;
+      border-radius: 50px;
+  }
+
+  .countdown-btn{
+      width: 12rem;
+  }
+
+  .countdown-timer h3{
+      font-size: 1.125rem;
+      margin-bottom: 2rem;
+  }
+
+  .timer{
+      display: flex;
+      gap: 10px;
+      margin-bottom: 0.5rem;
+  }
+
+  .timer span{
+      font-size: 2.5rem;
+  }
+
+  .timer p{
+      font-size: 0.675rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Roadmap Section */
+  .roadmap-section{
+      padding: 5% 4%;
+  }
+
+  .roadmap-h4{
+      font-size: 1rem;
+  }
+
+  .roadmap-content{
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      align-items: center;
+  }
+
+  .roadmap-content h3{
+      margin-bottom: 2rem;
+      font-size: 2rem;
+  }
+
+  .roadmap-content-flex-item h4{
+      font-size: 1.125rem;
+  }
+
+  .roadmap-content-flex-item p{
+      font-size: 1rem;
+      margin-bottom: 0.5rem;
+  }
+
+  .roadmap-content-flex-item ul li{
+      padding-left: 20%;
+  }
+
+  .roadmap-content-flex-item ul li .span{
+      width: 30px;
+      height: 30px;
+      left: -10px;
+  }
+
+  .roadmap-content-flex-item ul li .span-2{
+      width: 10px;
+      left: -2px;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Contact Section */
+  .contact-section{
+      padding: 5% 4%;
+  }
+
+  .contact{
+      width: 100%;
+      height: 16rem;
+      border-radius: 50px;
+      padding: 10% 5%;
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .contact p{
+      font-size: 1rem;
+  }
+
+  .contact input{
+      width: 100%;
+      height: 50px;
+      border-radius: 50px;
+      border: none;
+      background: rgba(255, 255, 255, 0.29);
+      padding-left: 10%;
+  }
+
+  .input-div{
+      width: 100%;
+      margin-top: 1rem;
+  }
+
+  .send-div{
+      width: 5.813rem;
+      height: 50px;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Features Section */
+  .feature-section{
+      padding: 10% 4%;
+      margin-bottom: 3rem;
+  }
+
+  .features-img-div{
+      height: 50px;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Footer Section */
+  .footer-section{
+      padding: 5% 4%;
+  }
+
+  .footer{
+      justify-content: space-between;
+      gap: 5rem;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Introduction Section */
+  .introduction h3{
+      font-size: 3.2rem;
+  }
+
+  .introduction p{
+      font-size: 1.5rem;
+  }
+
+  .introduction-btn{
+      margin-top: 2.5rem;
+      width: 16rem;
+      height: 4rem;
+      font-size: 1.5rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* About Section */
+  .about{
+      width: 100%;
+      padding: 5% 4%;
+      flex-direction: column-reverse;
+  }
+
+  .about-content-one{
+      width: 100%;
+      flex-direction: column;
+      gap: 1.5rem;
+      text-align: center;
+      align-items: center;
+  }
+
+  .about-content-one .child div{
+      width: 100%;
+      height: 6.5rem;
+      text-align: left;
+      padding: 10px;
+      margin-top: 0.5rem;
+  }
+
+  .about-content-one .child div h4{
+      font-size: 1.5rem;
+  }
+  
+  .about-content-one .child div p{
+      font-size: 1rem;
+  }
+
+  .about-content-two{
+      padding: 0;
+      width: 100%;
+      margin-bottom: 2.5rem;
+  }
+  
+  .about-content-two h4{
+      width: 15%;
+      font-size: 1.5rem;
+  }
+  
+  .about-content-two h3{
+      font-size: 2.4rem;
+  }
+  
+  .about-content-two p{
+      font-size: 1.5rem;
+  }
+
+  .about-content-button{
+      width: 60%;
+      height: 4.5rem;
+      font-size: 1.3rem;
+  }
+
+  .about-content-one .child{
+      width: 70%;
+  }
+
+  .about-content-two p{
+      width: 100%;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Gameplay Section */
+
+  .gameplay{
+      width: 100%;
+      padding: 5% 4%;
+      flex-direction: column;
+  }
+  
+  .gameplay-content img{
+      width: 100%;
+  }
+  
+  .gameplay-content-one{
+      padding: 0 ;
+  }
+  
+  .gameplay-content-one h4{
+      font-size: 1.5rem;
+  }
+  
+  .gameplay-content-one h3{
+      font-size: 2.4rem;
+  }
+  
+  .gameplay-content-one p{
+      font-size: 1.5rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Tokenomics Section */
+  .tokenomics-section{
+      padding: 5% 4%;
+      width: 100%;
+  }
+
+  .tokenomics-heading{
+      padding: 0;
+  }
+
+  .tokenomics-heading h3{
+      font-size: 2.4rem;
+  }
+
+  .tokenomics-heading p{
+      font-size: 1.5rem;
+  }
+
+  .tokenomics-content{
+      flex-direction: column;
+  }
+
+  .tokenomics-content-div{
+      display: flex;
+      width: 80%;
+      margin-top: 2rem;
+  }
+
+  .tokenomics-content-div div:last-child h5{
+      font-size: 1.8rem;
+  }
+
+  .tokenomics-content-div div:last-child p{
+      font-size: 1.5rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Countdown Section */
+  .countdown-section{
+      padding: 7% 4%;
+  }
+
+  .countdown-timer{
+      width: 100%; 
+      height: 19rem;
+      padding: 4% 2%;
+      border-radius: 50px;
+  }
+
+  .countdown-timer h3{
+      font-size: 2rem;
+      margin-bottom: 2rem;
+  }
+
+  .timer{
+      display: flex;
+      gap: 30px;
+      margin-bottom: 0.5rem;
+  }
+
+  .timer span{
+      font-size: 3.2rem;
+  }
+
+  .timer p{
+      font-size: 0.675rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Roadmap Section */
+
+  .roadmap-content{
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      align-items: center;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Contact Section */
+  .contact-section{
+      padding: 5% 4%;
+  }
+
+  .contact{
+      width: 100%;
+      height: 16rem;
+      border-radius: 50px;
+      padding: 8% 5%;
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .contact p{
+      font-size: 1rem;
+  }
+
+  .contact input{
+      width: 100%;
+      height: 54px;
+      border-radius: 50px;
+      border: none;
+      background: rgba(255, 255, 255, 0.29);
+      padding-left: 5%;
+  }
+
+  .input-div{
+      width: 100%;
+  }
+
+  .send-div{
+      width: 5.813rem;
+      height: 54px;
+  }
+}
+
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .about-content-one .child div{
+      width: 12rem;
+      height: 6.5rem;
+      background: linear-gradient(180deg, rgba(0, 150, 255, 0.22) 0%, rgba(0, 150, 255, 0) 100%);
+      text-align: left;
+      padding: 25px;
+      margin-top: 0.5rem;
+  }
+
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Contact Section */
+  .contact-section{
+      padding: 5% 4%;
+  }
+
+  .contact{
+      width: 100%;
+      height: 18rem;
+      border-radius: 50px;
+      padding: 5%;
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .contact h5{
+      font-size: 2.4rem;
+  }
+
+  .contact p{
+      font-size: 1.5rem;
+  }
+
+  .contact input{
+      width: 80%;
+      height: 56px;
+      border-radius: 50px;
+      border: none;
+      background: rgba(255, 255, 255, 0.29);
+      padding-left: 5%;
+  }
+
+  .input-div{
+      width: 100%;
+  }
+
+  .send-div{
+      width: 5.813rem;
+      height: 56px;
+      right: 20%;
+  }
+}
+
+
+
+@media screen and (max-width: 800px) {
+  /***************************************/
+  /***************************************/
+  /***************************************/
+  /* Navbar Section */
+  .navbar{
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .nav-links-div{
+      width: 100%;
+      transform: translate(-120%, 0);
+      transition: 0.5s ease-in-out;
+      position: absolute;
+      padding: 10px 0;
+      top: 8%;
+      left: 0;
+      text-align: center;
+      background-image: url("../images/bg.png");
+  }
+
+  .nav-logo img{
+      width: 30%;
+  }
+
+  .nav-logo h3{
+      font-size: 0.7rem;
+  }
+
+  .navbar ul{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+      margin: 0 ;
+  }
+
+  .nav-links{
+      margin: 1.5rem 0 auto;
+      text-align: center;
+  }
+
+  .nav-links a{
+      position: relative;
+      margin: 0;
+  }
+
+  .menubar {
+      display: flex;
+      width:25px;
+      height: 20px;
+      position: absolute; 
+      right: 0;
+      top:0; 
+      margin:18px 20px;
+  }
+
+  .bar2{
+      width: 75%;
+      transform: scaleX(1);
+      transform-origin: left;
+  }
+
+  .bar1,.bar2,.bar3{
+      transition: 0.3s;
+  }
+
+  .barclose1{
+      width: 100%;
+      position: absolute;
+      transform: rotate(45deg);
+  }
+
+  .barclose2{
+      width: 100%;
+      position: absolute;
+      transform: scaleX(0);
+      transform-origin: right;
+  }
+
+  .barclose3{
+      width: 100%;
+      position: absolute;
+      transform: rotate(-45deg);
+  }
+
+  .newlinks{
+      transform: translate(0,0);
+  }
+
+
+}
