--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,13 @@
  
 }
 
+
 body{
   background-color: #1B1B1C;
   font-family: 'Righteous';
-  width: 100% !important;
+  max-width: 100vw;
+  overflow-x: hidden;
+   
 }
 
 
@@ -23,7 +26,7 @@ body{
 }
 
 .scrolled.slide-up{
-  animation: slide-in-up 1s ease-in-out both;
+  animation: slide-in-up 2s ease-in-out both;
 }
 
 @keyframes slide-in-up {
@@ -40,7 +43,7 @@ body{
 }
 
 .scrolled.slide-down{
-  animation: slide-in-down 1s ease-in-out both;
+  animation: slide-in-down 2s ease-in-out both;
 }
 
 @keyframes slide-in-down {
@@ -57,7 +60,7 @@ body{
 }
 
 .scrolled.slide-left {
-  animation: slide-in-left 1s ease-in-out both;
+  animation: slide-in-left 2s ease-in-out both;
 }
 
 @keyframes slide-in-left {
@@ -74,7 +77,7 @@ body{
 }
 
 .scrolled.slide-right {
-  animation: slide-in-right 1s ease-in-out both;
+  animation: slide-in-right 2s ease-in-out both;
 }
 
 @keyframes slide-in-right {
@@ -1651,6 +1654,7 @@ footer{
   padding: 5%;
   color: #fff;
  margin-left: 10px;
+ background-color: whitesmoke;
 }
 
 .contact{
