--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
 body{
   background-color: #1B1B1C;
   font-family: 'Righteous';
-  max-width: 100vw;
-  overflow-x: hidden;
+  max-width: 100%;
+  
    
 }
 
@@ -139,10 +139,12 @@ img {
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   z-index: 999;
   padding: 40px 70px 70px 70px;
+  overflow: hidden;
 }
 
 .navbar__container {
@@ -1546,7 +1548,7 @@ margin-bottom: 0;
   background-color: #151516;
   color: #e3e3e3;
 }
-
+.hidden {display:none;}
 
 /* Footer CSS */
 footer{
