--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
 * {
+  padding:0;
+  margin:0;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Righteous';
- 
 }
 
 
@@ -12,7 +10,7 @@ body{
   background-color: #1B1B1C;
   font-family: 'Righteous';
   max-width: 100%;
-  
+ 
    
 }
 
@@ -106,7 +104,7 @@ img {
   width:40px;
   height: 20px;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content:flex-end;
   align-items: flex-end;
   display: none;
 }
@@ -139,7 +137,7 @@ img {
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: absolute;
   top: 0;
   width: 100%;
   z-index: 999;
@@ -2518,7 +2516,7 @@ footer{
 }
 
 @media all {
-  html, body{
+body{
     overflow-x: hidden;
 }
 }
