--- a/css/styles.css
+++ b/css/styles.css
@@ -230,9 +230,10 @@ img {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
+  height: 100%;
   position: relative;
-  margin: auto;
+  margin: 100px auto;
 }
 
 /* Make the images invisible by default */
@@ -328,13 +329,7 @@ img {
     font-family: 'Righteous', cursive;
     height: 14vh;
 }
-.artst{
-  -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: rgb(182, 179, 179);
-    color: #1B1B1C;
-    font-family: 'Righteous', cursive;
-    height: 20vh;
-}
+
 @media screen and (max-width: 960px) {
   .navbar__container {
     display: flex;
@@ -437,16 +432,16 @@ img {
   border-radius: 0px;
   top: 0;
   right: 0;
-  bottom: -40px;
+  bottom: -60px;
   left: 0;
 }
 
 #bg-video {
   min-width: 100%;
   min-height: 100vh;
-  max-width: 100%;
+  width: 100%;
   max-height: 200vh;
-  object-fit:cover;
+  object-fit:fill;
   z-index: -1;
   opacity: -100px;
 }
@@ -499,7 +494,7 @@ img {
 .main__content h2 {
   font-size: 5vw;
   margin-top: 5px;
-  background-color: white;
+  background-color: #feef3c;
   
   background-size: 100%;
   -webkit-background-clip: text;
@@ -510,7 +505,7 @@ img {
 
 .main__content p {
   margin-top: 1rem;
-  font-size: 1vw;
+  font-size: 2vw;
   font-weight: 700;
   color: #ddd2d2 !important;
   
@@ -1167,6 +1162,8 @@ margin-bottom: 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
+
+  color: #6f6407 !important;
 }
  .team .team-social{
   position: absolute;
