--- a/landing/landing.css
+++ b/landing/landing.css
@@ -51,10 +51,13 @@ body {
     left: 0;
     padding: 25px 15px 15px;
     width: 100%;
-    font-family: "Raleway", sans-serif;
+    font-family: "Righteous", sans-serif;
     font-size: 16px;
+    font-weight: 900;
     color: #feef3c;
     opacity: 0;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
     transition: 0.3s;
 }
+
+@media only screen and (max-width: 375px) {}
